[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ams-wf"
version = "1.0"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "argparse",
  "kosh>=3.0.1",
  "pika>=1.3.0",
  "numpy>=1.2.0"
]

[project.scripts]
AMSBroker = "ams_wf.AMSBroker:main"
AMSDBStage = "ams_wf.AMSDBStage:main"
AMSOrchestrator = "ams_wf.AMSOrchestrator:main"
AMSStore = "ams_wf.AMSStore:main"
AMSTrain = "ams_wf.AMSTrain:main"

[project.urls]
"Homepage" = "https://github.com/LLNL/AMS/"

[tool.setuptools]
package-dir = {"" = "src/AMSWorkflow"}
packages = ["ams_wf", "ams"]

# Black formatting
[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

# iSort
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"

# flake8
[tool.flake8]
ignore = ["E501", "W503", "E226", "BLK100", "E203"]
max-line-length = 120
exclude = [
    # No need to traverse our git directory
    ".git",
    # There's no value in checking cache directories
    "__pycache__",
    "*.egg-info",
    "build"
]
# E501: Line too long
# W503: Line break occurred before binary operator
# E226: Missing white space around arithmetic operator

[tool.ruff]
lint.ignore = ["E501", "E226", "E203"]
show-fixes = true
exclude = [
  ".git",
  "__pycache__",
  "*.egg-info",
  "build"
]
# change the default line length number or characters.
line-length = 120
lint.select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I', 'N', 'Q']

[tool.yapf]
ignore = ["E501", "W503", "E226", "BLK100", "E203"]
column_limit = 120
